--- a/form/socialmagick_menu.xml
+++ b/form/socialmagick_menu.xml
@@ -92,6 +92,17 @@
                     showon="image_source:custom"
             />
 
+            <field
+                    name="override_og"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="0"
+            >
+                <option value="0">JNO</option>
+                <option value="1">JYES</option>
+            </field>
         </fieldset>
     </fields>
 </form>
