Hide menu item OG image options when the user selects no images to be generated

--- a/form/socialmagick_menu.xml
+++ b/form/socialmagick_menu.xml
@@ -35,6 +35,7 @@
                     type="socialmagicktemplate"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_DESC"
+                    showon="generate_images:1"
             />
 
             <field
@@ -43,6 +44,7 @@
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_DESC"
                     filter="no_html"
+                    showon="generate_images:1"
                 />
 
             <field
@@ -52,6 +54,7 @@
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_DESC"
                     class="btn-group btn-group-yesno"
                     default="1"
+                    showon="generate_images:1"
             >
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
@@ -64,6 +67,7 @@
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC"
                     class="btn-group btn-group-yesno"
                     default="1"
+                    showon="generate_images:1"
             >
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
@@ -76,6 +80,7 @@
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_DESC"
                     class="btn-group btn-group-yesno"
                     default="none"
+                    showon="generate_images:1"
             >
                 <option value="none">PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_NONE</option>
                 <option value="intro">PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_INTRO</option>
@@ -89,7 +94,7 @@
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_DESC"
                     filter="no_html"
-                    showon="image_source:custom"
+                    showon="image_source:custom[AND]generate_images:1"
             />
 
             <field
@@ -99,6 +104,7 @@
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC"
                     class="btn-group btn-group-yesno"
                     default="0"
+                    showon="generate_images:1"
             >
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
