--- a/form/socialmagick_category.xml
+++ b/form/socialmagick_category.xml
@@ -27,12 +27,12 @@
             />
 
             <field
-                name="category_override"
-                type="fancyradio"
-                label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL"
-                description="PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_OVERRIDE_DESC"
-                class="btn-group btn-group-yesno"
-                default="0"
+                    name="category_override"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_OVERRIDE_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="0"
             >
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
@@ -66,7 +66,7 @@
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_DESC"
                     filter="no_html"
                     showon="category_override:1[AND]category_generate_images:1"
-                />
+            />
 
             <field
                     name="category_use_article"
@@ -130,6 +130,127 @@
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
             </field>
+
+            <field
+                    type="note"
+                    class="alert alert-info"
+                    label="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_DESC"
+            />
+
+            <field
+                    name="category_og_title"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_NO</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_JOOMLA</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_CUSTOM</option>
+            </field>
+
+            <field
+                    name="category_og_title_custom"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="category_og_title:2"
+            />
+
+            <field
+                    name="category_og_description"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_NO</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_JOOMLA</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_CUSTOM</option>
+            </field>
+
+            <field
+                    name="category_og_description_custom"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="category_og_description:2"
+            />
+
+            <field
+                    name="category_og_url"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">JNO</option>
+                <option value="1">JYES</option>
+            </field>
+
+            <field
+                    name="category_og_site_name"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">JNO</option>
+                <option value="1">JYES</option>
+            </field>
+
+            <field
+                    name="category_twitter_card"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_NONE</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY_LARGE</option>
+            </field>
+
+            <field
+                    name="category_twitter_site"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="category_twitter_card!:0"
+            />
+
+            <field
+                    name="category_twitter_creator"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="category_twitter_card!:0"
+            />
+
+            <field
+                    name="category_fb_app_id"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_DESC"
+                    default=""
+                    filter="no_html"
+            />
 
             <!-- ARTICLE OPTIONS -->
 
@@ -243,6 +364,128 @@
                 <option value="0">JNO</option>
                 <option value="1">JYES</option>
             </field>
+
+            <field
+                    type="note"
+                    class="alert alert-info"
+                    label="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_DESC"
+            />
+
+            <field
+                    name="article_og_title"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_NO</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_JOOMLA</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_CUSTOM</option>
+            </field>
+
+            <field
+                    name="article_og_title_custom"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="article_og_title:2"
+            />
+
+            <field
+                    name="article_og_description"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_NO</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_JOOMLA</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_CUSTOM</option>
+            </field>
+
+            <field
+                    name="article_og_description_custom"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="article_og_description:2"
+            />
+
+            <field
+                    name="article_og_url"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">JNO</option>
+                <option value="1">JYES</option>
+            </field>
+
+            <field
+                    name="article_og_site_name"
+                    type="fancyradio"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC"
+                    class="btn-group btn-group-yesno"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">JNO</option>
+                <option value="1">JYES</option>
+            </field>
+
+            <field
+                    name="article_twitter_card"
+                    type="list"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_DESC"
+                    default="-1"
+            >
+                <option value="-1">JGLOBAL_INHERIT</option>
+                <option value="0">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_NONE</option>
+                <option value="1">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY</option>
+                <option value="2">PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY_LARGE</option>
+            </field>
+
+            <field
+                    name="article_twitter_site"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="article_twitter_card!:0"
+            />
+
+            <field
+                    name="article_twitter_creator"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_DESC"
+                    default=""
+                    filter="no_html"
+                    showon="article_twitter_card!:0"
+            />
+
+            <field
+                    name="article_fb_app_id"
+                    type="text"
+                    label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_LABEL"
+                    description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_DESC"
+                    default=""
+                    filter="no_html"
+            />
+
         </fieldset>
     </fields>
 </form>
