--- a/form/socialmagick_article.xml
+++ b/form/socialmagick_article.xml
@@ -7,7 +7,7 @@
   ~ @license   GNU GPL v3 or later
   -->
 <form>
-    <fields name="socialmagick" addfieldpath="/plugins/system/socialmagick/fields">
+    <fields name="socialmagick" addfieldprefix="LucidFox\Plugin\System\SocialMagick\Field">
         <fieldset name="socialmagick"
                   label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_FIELDSET_SOCIALMAGICK_HEAD"
 
@@ -20,7 +20,8 @@
 
             <field
                 name="override"
-                type="fancyradio"
+                type="radio"
+                layout="joomla.form.field.radio.switcher"
                 label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL"
                 description="PLG_SYSTEM_SOCIALMAGICK_FORM_ARTICLE_OVERRIDE_DESC"
                 class="btn-group btn-group-yesno"
@@ -32,7 +33,8 @@
 
             <field
                     name="generate_images"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC"
                     class="btn-group btn-group-yesno"
@@ -62,7 +64,8 @@
 
             <field
                     name="use_article"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -75,7 +78,8 @@
 
             <field
                     name="use_title"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -123,7 +127,8 @@
 
             <field
                     name="override_og"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC"
                     class="btn-group btn-group-yesno"
@@ -189,7 +194,8 @@
 
             <field
                     name="og_url"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC"
                     class="btn-group btn-group-yesno"
@@ -202,7 +208,8 @@
 
             <field
                     name="og_site_name"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC"
                     class="btn-group btn-group-yesno"
