--- a/form/socialmagick_category.xml
+++ b/form/socialmagick_category.xml
@@ -7,7 +7,7 @@
   ~ @license   GNU GPL v3 or later
   -->
 <form>
-    <fields name="socialmagick" addfieldpath="/plugins/system/socialmagick/fields">
+    <fields name="socialmagick" addfieldprefix="LucidFox\Plugin\System\SocialMagick\Field">
         <fieldset name="socialmagick"
                   label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_FIELDSET_SOCIALMAGICK_HEAD"
 
@@ -28,7 +28,8 @@
 
             <field
                     name="category_override"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_OVERRIDE_DESC"
                     class="btn-group btn-group-yesno"
@@ -40,7 +41,8 @@
 
             <field
                     name="category_generate_images"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC"
                     class="btn-group btn-group-yesno"
@@ -70,7 +72,8 @@
 
             <field
                     name="category_use_article"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -83,7 +86,8 @@
 
             <field
                     name="category_use_title"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -131,7 +135,8 @@
 
             <field
                     name="category_override_og"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC"
                     class="btn-group btn-group-yesno"
@@ -197,7 +202,8 @@
 
             <field
                     name="category_og_url"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC"
                     class="btn-group btn-group-yesno"
@@ -210,7 +216,8 @@
 
             <field
                     name="category_og_site_name"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC"
                     class="btn-group btn-group-yesno"
@@ -273,7 +280,8 @@
 
             <field
                     name="article_override"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_ARTICLE_OVERRIDE_DESC"
                     class="btn-group btn-group-yesno"
@@ -285,7 +293,8 @@
 
             <field
                     name="article_generate_images"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC"
                     class="btn-group btn-group-yesno"
@@ -315,7 +324,8 @@
 
             <field
                     name="article_use_article"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -328,7 +338,8 @@
 
             <field
                     name="article_use_title"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC"
                     class="btn-group btn-group-yesno"
@@ -365,7 +376,8 @@
 
             <field
                     name="article_override_og"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC"
                     class="btn-group btn-group-yesno"
@@ -431,7 +443,8 @@
 
             <field
                     name="article_og_url"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC"
                     class="btn-group btn-group-yesno"
@@ -444,7 +457,8 @@
 
             <field
                     name="article_og_site_name"
-                    type="fancyradio"
+                    type="radio"
+                    layout="joomla.form.field.radio.switcher"
                     label="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL"
                     description="PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC"
                     class="btn-group btn-group-yesno"
